--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NewTodoOnRails</title>
+  <title>TodoAjax</title>
   <%= csrf_meta_tags %>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+  <!-- Add jQuery -->
+  <%= javascript_include_tag 'https://code.jquery.com/jquery-3.2.1.min.js' %>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
